--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ members = [
 [dependencies]
 
 [dependencies.windows]
-version = "0.46.0"
+version = "0.48.0"
 features = [
     "implement",
     "Win32_Foundation",
     "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Direct3D11on12",
+    "Win32_Graphics_Direct3D",
+    "Win32_Graphics_Direct3D12",
     "Win32_Security",
 ]
